# gradebook

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  config.py  models.py
app/routes/: __init__.py  grades.py  stats.py  students.py  subjects.py
tests/: conftest.py  test_grades.py  test_students.py  test_subjects.py
tests/unit/: test_stats.py  test_validation.py
